fix: alignment issue with ReplyBox

--- a/client/src/components/Post.css
+++ b/client/src/components/Post.css
@@ -9,7 +9,7 @@
   border-radius: 6px;
   width: 100%;
   height: 94px;
-  padding: 10px 30px;
+  padding: 20px 30px;
   box-sizing: border-box;
 
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.12);
