--- a/client/src/components/Reply.css
+++ b/client/src/components/Reply.css
@@ -9,7 +9,7 @@
   border-radius: 6px;
   width: 100%;
   height: 94px;
-  padding: 10px 30px;
+  padding: 20px 30px;
   box-sizing: border-box;
 
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.12);
@@ -27,7 +27,7 @@
 }
 
 .reply-operation {
-  border: 1px solid rgba(0, 0, 0, 0.12);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 100px;
   margin-left: 10px;
   padding: 2px 12px;
